cmake_minimum_required(VERSION 3.25)
project(AIComputeLabs_GPU CUDA)

set(CMAKE_CUDA_STANDARD 17)

add_executable(AIComputeLabs_GPU 1_hello_cuda.cu 2_indexing.cu)
add_executable(1_hello_cuda 1_hello_cuda.cu)
add_executable(2_indexing 2_indexing.cu)
add_executable(3_vector_add 3_vector_add.cu)
add_executable(4_device_query 4_device_query.cu)
add_executable(5_1_reduce_baseline 5_1_reduce_baseline.cu)
add_executable(5_2_reduce_v0 5_2_reduce_v0.cu)
add_executable(5_3_reduce_v1 5_3_reduce_v1.cu)
add_executable(5_4_reduce_v2 5_4_reduce_v2.cu)
add_executable(5_5_reduce_v3 5_5_reduce_v3.cu)
add_executable(5_6_reduce_v4 5_6_reduce_v4.cu)
add_executable(5_7_reduce_v5 5_7_reduce_v5.cu)
add_executable(5_8_reduce_v6 5_8_reduce_v6.cu)
add_executable(6_warp_level_reduce 6_warp_level_reduce.cu)
add_executable(7_1_histogram 7_1_histogram.cu)
add_executable(7_2_histogram 7_2_histogram.cu)
add_executable(8_copy_if 8_copy_if.cu)


set_target_properties(AIComputeLabs_GPU PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
